# coterie

./: .env.example  .gitignore  2026-02-25-192120-ive-logged-some-errors-in-text-file-here-and-ple.txt  CLAUDE.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_STATUS.md  LICENSE  README.md  alembic.ini  errorsfoundintesting.md  pyproject.toml  requirements.txt  run_ui.py
.github/workflows/: pylint.yml  test.yml
archive/sample-data/: 00 Grapevine NPC Library, 2nd Edition.txt  January 2004 Update.gvu  October 2003 Menu Update.gvu
docs/: AGENTS.md  Grapevine-Migration-PRD.md  ITERATION_1_SUMMARY.md  ITERATION_3_VV_REPORT.md  ITERATION_4_SUMMARY.md  ITERATION_5_REPORT.md  ITERATION_8_SUMMARY.md  VERIFICATION_REPORT.md  VV_REPORT_ITERATION_1.md
docs/plans/: 2026-02-25-fix-testing-errors-design.md  2026-02-25-fix-testing-errors.md  2026-02-25-powers-writeups-implementation.md  2026-02-25-powers-writeups-system-design.md
migrations/: env.py
migrations/versions/: 120defe146e7_add_boon_model_for_tracking_favors.py  7711f72054f3_initial_migration_with_all_models.py
src/api/: __init__.py  main.py  schemas.py
src/characters/: __init__.py  base.py  changeling.py  demon.py  factory.py  fera.py  hunter.py  kuei_jin.py  mage.py  mortal.py  mummy.py  vampire.py  various.py  werewolf.py  wraith.py
src/core/: config.py  (+2 more)
tests/: ci_tests.yml  conftest.py  test_chronicle_detail_widget.py  test_chronicle_edit_dialog.py  test_ci_push_test.txt  test_game_session_dialog.py  test_main_window_chronicle_wiring.py
ui-desktop/: README.md  __init__.py  api_client.py  main.py  main_window.py
(+535 files in other folders)
