[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "grapevine-modern"
version = "0.1.0"
description = "Modern Python implementation of Grapevine LARP manager"
requires-python = ">=3.12"
license = "MIT"
authors = [
    {name = "Grapevine Migration Team"}
]

[tool.black]
line-length = 100
target-version = ['py312']

[tool.ruff]
line-length = 100
target-version = "py312"
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers --strict-config"
testpaths = ["tests"]
asyncio_mode = "auto"
